   - dtucker@cvs.openbsd.org 2007/06/12 11:56:15      [gss-genr.c]      Pass GSS OID to gss_display_status to provide better information in      error messages.  Patch from Simon Wilkinson via bz 1220.  ok djm@